@startuml
class OperasiBilanganAbs {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiPenjumlahan {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiPengurangan {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiPerkalian {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiPembagian {
    +protected double a, b, c
    +protected void set_A(double a)
    +protected void set_B(double b)
    +protected void set_C()
    +protected double get_A()
    +protected double get_B()
    +protected double get_C()
    +protected void tampil()
}

class OperasiBilanganCetakAbs {
    +private void cetakSemua(OperasiBilanganAbs[] OB, double a, double b)
}

OperasiPenjumlahan <|-- OperasiBilanganAbs
OperasiPengurangan <|-- OperasiBilanganAbs
OperasiPerkalian <|-- OperasiBilanganAbs
OperasiPembagian <|-- OperasiBilanganAbs
OperasiBilanganCetakAbs --|> OperasiBilanganAbs
@enduml
